syntax = "proto3";

package session.v1;

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/session/v1;sessionv1";

import "google/protobuf/timestamp.proto";

// SessionEventType enumerates the supported session event types.
enum SessionEventType {
  SESSION_EVENT_TYPE_UNSPECIFIED = 0;
  SESSION_STARTED = 1;
  SESSION_ENDED = 2;
  NOTE_ADDED = 3;
  ACTION_ROLL_REQUESTED = 4;
  ACTION_ROLL_RESOLVED = 5;
  REQUEST_REJECTED = 6;
  OUTCOME_APPLY_REQUESTED = 7;
  OUTCOME_APPLIED = 8;
  OUTCOME_REJECTED = 9;
}

// SessionEvent represents an immutable event in the session event stream.
message SessionEvent {
  string session_id = 1;
  uint64 seq = 2;
  google.protobuf.Timestamp ts = 3;
  SessionEventType type = 4;
  string request_id = 5;
  string invocation_id = 6;
  string participant_id = 7;
  string character_id = 8;
  bytes payload_json = 9;
}
