syntax = "proto3";

package session.v1;

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/session/v1;sessionv1";

import "session/v1/requests.proto";

service SessionService {
  // Start a new session for a campaign.
  // Enforces at most one ACTIVE session per campaign.
  rpc StartSession(StartSessionRequest) returns (StartSessionResponse);

  // List sessions for a campaign.
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);

  // Get a session by campaign ID and session ID.
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse);

  // End a session by campaign ID and session ID.
  rpc EndSession(EndSessionRequest) returns (EndSessionResponse);

  // Append a session event.
  rpc SessionEventAppend(SessionEventAppendRequest) returns (SessionEventAppendResponse);

  // List session events ordered by sequence.
  rpc SessionEventsList(SessionEventsListRequest) returns (SessionEventsListResponse);

  // Roll Duality dice for a session.
  rpc SessionActionRoll(SessionActionRollRequest) returns (SessionActionRollResponse);

  // Apply the mandatory outcome effects from a resolved action roll.
  rpc ApplyRollOutcome(ApplyRollOutcomeRequest) returns (ApplyRollOutcomeResponse);
}
